Added design elements

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,19 @@
   color: white;
 }
 
+
+.App-footer {
+  background-color: #282c34;
+  min-height: 15vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  font-family: 'monospace';
+  color: white;
+}
+
 .App-link {
   color: #61dafb;
 }
